--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,9 +4,7 @@
     "build": "deno run -A npm:vitepress@^1.4.3 build",
     "check": "deno task fmt && deno task lint",
     "preview": "deno run -A npm:vitepress@^1.4.3 preview",
-    "fmt": "deno task fmt-ts && deno task fmt-vue",
-    "fmt-ts": "deno fmt --ignore=.vitepress/dist,.vitepress/cache . ",
-    "fmt-vue": "deno run -A npm:prettier --write **/*.vue",
+    "fmt": "deno fmt .",
     "lint": "deno task lint-ts && deno task lint-vue",
     "lint-ts": "deno lint --ignore=.vitepress/dist,.vitepress/cache .",
     "lint-vue": "deno run -A npm:oxlint@latest -c .oxlintrc.json .vitepress/**/*.vue",
@@ -16,16 +14,19 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.8",
+    "@std/datetime": "jsr:@std/datetime@^0.225.2",
     "@std/fs": "jsr:@std/fs@^1.0.5",
     "@vitejs/plugin-vue": "npm:@vitejs/plugin-vue@^5.1.4",
     "less": "npm:less@^4.2.0",
     "vitepress": "npm:vitepress@^1.4.3",
     "vue": "npm:vue@^3.5.12"
   },
+  "unstable": ["fmt-component"],
   "nodeModulesDir": "auto",
   "compilerOptions": {
-    "types": [
-      "./global.d.ts"
-    ]
+    "types": ["./global.d.ts"]
+  },
+  "fmt": {
+    "exclude": [".vitepress/cache/", "node_modules/", ".vitepress/dist/"]
   }
 }
