--- a/deno.jsonc
+++ b/deno.jsonc
@@ -20,6 +20,7 @@
     "@std/fs": "jsr:@std/fs@^1.0.6",
     "@std/path": "jsr:@std/path@^1.0.8",
     "@vitejs/plugin-vue": "npm:@vitejs/plugin-vue@^5.2.1",
+    "latex.css": "npm:latex.css@^1.12.0",
     "less": "npm:less@^4.2.1",
     "vitepress": "npm:vitepress@^1.5.0",
     "vue": "npm:vue@^3.5.13"
