feat: respect user preference

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,10 @@
     "editor.indentSize": "tabSize",
     "editor.tabSize": 2
   },
+  "[typescript]": {
+    "editor.indentSize": "tabSize",
+    "editor.tabSize": 2
+  },
   "[vue]": {
     "editor.indentSize": "tabSize",
     "editor.tabSize": 2,
